RESOLVED FIXED 120900
FTL ArithNeg Int32Use doesn't check negative zero
https://bugs.webkit.org/show_bug.cgi?id=120900
Summary FTL ArithNeg Int32Use doesn't check negative zero
Filip Pizlo
Reported 2013-09-06 15:26:11 PDT
Patch forthcoming.
Attachments
the patch (1.30 KB, patch)
2013-09-06 15:27 PDT, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2013-09-06 15:27:29 PDT
Created attachment 210805 [details] the patch
Mark Hahnenberg
Comment 2 2013-09-06 15:28:45 PDT
Comment on attachment 210805 [details] the patch r=me
Filip Pizlo
Comment 3 2013-09-06 15:33:39 PDT
Note You need to log in before you can comment on or make changes to this bug.