FTL ArithNeg Int32Use doesn't check negative zero https://bugs.webkit.org/show_bug.cgi?id=120900

Reviewed by Mark Hahnenberg.

Source/JavaScriptCore:

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::compileArithNegate):

LayoutTests:

* fast/js/regress/script-tests/negative-zero-modulo.js:



Canonical link: https://commits.webkit.org/138826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155220 268f45cc-cd09-0410-ab3c-d52691b4dbfc